<resources>
    <string name="app_name">E-Kampo</string>
    <string name="landing_page_msg">Explore a dynamic document sharing platform</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="reg_no">Reg No.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create account?</string>
    <string name="have_an_account">Already Have an account?</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="e_kampo">E-Kampo</string>
    <string name="hello">Hello</string>
    <string name="search">Search…</string>
    <string name="get_started">Get Started</string>
    <string name="courses">Courses</string>
    <string name="recent">Recent</string>
</resources>
