<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="#6746ba"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/e_kampo"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:padding="5dp"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:text="@string/landing_page_msg"
        android:textColor="#bfc0c0"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/home_name"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/home_name"
        app:layout_constraintTop_toBottomOf="@+id/home_name" />

    <ImageView
        android:id="@+id/intro_vector1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableEnd="@drawable/baseline_arrow_circle_right_24"
        android:padding="10dp"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/custom_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>