<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6746ba"
    tools:context=".dashboard_package.DashboardActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/my_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/d"
            tools:layout_editor_absoluteX="298dp"
            tools:layout_editor_absoluteY="21dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/welcome_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="Hi Brian"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/reg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="Welcome Back!"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/welcome_name"
        app:layout_constraintTop_toBottomOf="@+id/welcome_name" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/baseline_search_24"
        android:backgroundTint="#ffffff"
        android:drawablePadding="10dp"
        android:layout_margin="20dp"
        android:gravity="start"
        android:hint="@string/search"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/welcome_name"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="580dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/curved_corners"
    android:backgroundTint="#e9e2ee"
    android:padding="10dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:text="@string/courses"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courses_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:text="@string/recent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/announcement_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp" />
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>